--- a/index.html
+++ b/index.html
@@ -55,8 +55,22 @@
         </div>
 
         <div class="section3">
-            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-            <p class="reference">-Thor, God of Thunder</p>
+            <div class="section3a">
+                <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            </div>
+            <div class="section3b">
+                <p class="reference">-Thor, God of Thunder</p>
+            </div>
+        </div>
+
+        <div class="section4">
+            <div class="signup">
+                <div class="signup-text">
+                    <h3>Call to action! It's time!</h3>
+                    <h5>Sign up for our product by clicking that button over there!</h5>
+                </div>
+                <button class="button2">Sign Up</button>
+            </div>
         </div>
     </div>
 </body>
