Finished last section and footer.

--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
             <div class="container1">
                 <div class="info">
                     <img src="./images/pexels-breno-barison-13703440.jpg" alt="pexels breno barison">
-                    <div class="text">this is some subtext under an illustration or image</div>
+                    <div class="text">Image from Pexels by Breno Barison</div>
                 </div>
                 <div class="info">
                     <img src="./images/pexels-enrique-6415651.jpg" alt="pexels enrique">
-                    <div class="text">this is some subtext under an illustration or image</div>
+                    <div class="text">Image from Pexels by Enrique</div>
                 </div>
                 <div class="info">
                     <img src="./images/pexels-laura-meinhardt-13248419.jpg" alt="pexels laura meinhardt">
-                    <div class="text">this is some subtext under an illustration or image</div>
+                    <div class="text">Image from Pexels by Laura Meinhardt</div>
                 </div>
                 <div class="info">
                     <img src="./images/pexels-peter-billington-13465239.jpg" alt="pexels peter billington">
-                    <div class="text">this is some subtext under an illustration or image</div>
+                    <div class="text">Image from Pexels by Peter Billington</div>
                 </div>
             </div>
         </div>
@@ -65,12 +65,18 @@
 
         <div class="section4">
             <div class="signup">
-                <div class="signup-text">
-                    <h3>Call to action! It's time!</h3>
-                    <h5>Sign up for our product by clicking that button over there!</h5>
+                <div class="container2">
+                    <div class="signup-text">
+                        <h3>Call to action! It's time!</h3>
+                        <h5>Sign up for our product by clicking that button over there!</h5>
+                    </div>
+                    <button class="button2">Sign Up</button>
                 </div>
-                <button class="button2">Sign Up</button>
             </div>
+        </div>
+
+        <div class="footer">
+            Copyright © The Odin Project 2021
         </div>
     </div>
 </body>
